k8s/myportal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myportal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myportal
  template:
    metadata:
      labels:
        app: myportal
    spec:
      containers:
        - name: myportal
          image: stumna/myportal:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  # Ingress(ALB)와 연결하기 위해 NodePort로 변경합니다.
  type: NodePort 
  selector:
    app: myportal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myportal-ingress
  annotations:
    # AWS Load Balancer Controller가 ALB를 생성하도록 지정
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # 핵심: 테라폼으로 생성한 WAF(basicprotect)의 ARN을 여기에 입력합니다.
    # 테라폼 output에서 확인한 service_waf_arn을 그대로 붙여넣기
    alb.ingress.kubernetes.io/wafv2-acl-arn: "arn:aws:wafv2:ap-northeast-2:682540795004:regional/webacl/basicprotect/4f645c55-8f34-4334-9300-431d6a90fff2"
spec:
  rules:
    - host: #neinhour.store # 구매하신 도메인 설정
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
